# XoQ

./: .gitignore  .xoq_audio_server_key  .xoq_camera_key_idx0  .xoq_fake_can_server_key  CLAUDE.md  Cargo.toml  README.md  depth.npy  pick_place.json
.github/workflows/: ci.yml  connectivity.yml  pages.yml  release-pypi.yml  release.yml
api-baselines/: can.api  cv2.api  serial.api  sounddevice.api
examples/: audio_client.rs  audio_server.rs  camera_client.rs  camera_server.rs  camera_server_encoded.rs  camera_viewer.py  can_benchmark.py  can_benchmark.rs  can_client.rs  can_server.rs  list_ports.rs  moq_can_server.rs  moq_connectivity.rs  moq_serial_client.rs  moq_serial_server.rs  moq_test.rs  openarm_disable.rs  openarm_playback.rs  openarm_query.rs  openarm_set_zero.rs  openarm_teleop.rs  reachy_mini.rs  realsense_pointcloud.html  realsense_viewer.html  rustypot_remote.rs  serial_client.rs  serial_port_compat.rs  serial_server.rs  so100_reboot.rs  so100_teleop.rs  test_cartesian_ik.rs
js/: check_depth.mjs  check_depth2.mjs  check_depth3.mjs  check_depth4.mjs  package-lock.json  package.json  test_wt.mjs  vite.config.js
js/examples/: calibration.html  camera.html  can_cmd_test.html  common.css  default-config.json  (+20 more)
python/: .xoq_serial_bridge_key  Cargo.toml  pyproject.toml
python/examples/: camera_client_opencv.py  serial_client_iroh.py  serial_pyserial_compat.py  serial_server_iroh.py
python/src/: lib.rs
scripts/: check_python_api.py  deploy.sh  fetch-machines.sh  gen_pick_place.py  gravity_model_comparison.py  openarm_random_pose.py  setup-can.sh  setup-nvidia-server.sh
src/: arm_dynamics.rs  audio.rs  audio_client.rs  audio_macos.rs  audio_server.rs  av1_decoder.rs  bridge_server.rs  camera.rs  camera_client.rs  camera_macos.rs  camera_server.rs  can.rs  can_server.rs  can_types.rs  chat.rs  cmaf.rs  dav1d_decoder.rs  iroh.rs  lib.rs  moq.rs  moq_can_server.rs  nvdec_av1_decoder.rs  opencv.rs  realsense.rs  realsense_client.rs  serial.rs  serial_bridge.rs  serial_client.rs  serial_server.rs  serialport_impl.rs  socketcan_impl.rs  sounddevice_impl.rs  vtdec_av1_decoder.rs  vtenc.rs
tests/: test_connectivity.py  test_hooks.py  test_integration.py
(+1 files in other folders)
