[workspace]
members = [".", "python"]

[package]
name = "wser"
version = "0.1.0"
edition = "2021"

[features]
default = []
iroh = ["dep:iroh"]
serial = ["dep:tokio-serial"]

[dependencies]
moq-transport = "0.12"
moq-token = "0.5"
iroh = { version = "0.95", optional = true }
tokio-serial = { version = "5.4", optional = true }
moq-native = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
bytes = "1"
rand = "0.9"

[[example]]
name = "serial_server"
path = "examples/serial_server.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "serial_client"
path = "examples/serial_client.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "serial_port_compat"
path = "examples/serial_port_compat.rs"
required-features = ["iroh", "serial"]

[[example]]
name = "list_ports"
path = "examples/list_ports.rs"
required-features = ["serial"]
